lab2/03-prometheus-instance.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: default
  labels:
    prometheus: prometheus
    lab: lab2
spec:
  type: ClusterIP
  ports:
    - name: web
      port: 9090
      targetPort: 9090
      protocol: TCP
  selector:
    app.kubernetes.io/name: prometheus
    prometheus: prometheus
