lab2/04-prometheus-instance.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-web
  namespace: default
spec:
  type: NodePort
  ports:
  - name: web
    port: 9090
    targetPort: web
    nodePort: 30090
  selector:
    prometheus: prometheus
