lab2/05-grafana-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: random-db
  labels:
    app: grafana
    component: dashboard
    lab: lab2
spec:
  type: ClusterIP  
  ports:
    - port: 3000
      targetPort: 3000
      name: http
      protocol: TCP
  selector:
    app: grafana
